Getting ready for upload

--- a/src/cpp/Makefile
+++ b/src/cpp/Makefile
@@ -1,6 +1,7 @@
 ROOTCXXFLAGS := $(shell root-config --cflags --glibs --ldflags)
 LIBS := -lMinuit -lRooFit -lRooFitCore
 
+
 .SECONDEXPANSION:
 .PHONY: all clean
 
@@ -11,8 +12,15 @@ analysis: $$@.cpp
 temp_analysis: $$@.cpp
 	$(CXX) -g $< -o $@.exe $(ROOTCXXFLAGS) $(LIBS)
 
+cleaning_data: $$@.cpp
+	$(CXX) -g $< -o $@.exe $(ROOTCXXFLAGS) 
 
-all: analysis temp_analysis
+root_convert_mt: $$@.cpp
+	$(CXX) -g $< -o $@.exe -pthread $(ROOTCXXFLAGS) 
+
+
+
+all: clean analysis temp_analysis cleaning_data root_convert_mt
 
 clean: 
 	@rm -f *.exe 
