fixed root converter event size
event viewer still need tunings with
printing peaks, change a library in Makefile
cleaned some python code

--- a/src/cpp/Makefile
+++ b/src/cpp/Makefile
@@ -16,7 +16,7 @@ cleaning_data: $$@.cpp
 	$(CXX) -g $< -o $@.exe $(ROOTCXXFLAGS) 
 
 root_convert_mt: $$@.cpp
-	$(CXX) -g $< -o $@.exe -pthread $(ROOTCXXFLAGS) 
+	$(CXX) -g $< -o $@.exe -lpthread $(ROOTCXXFLAGS) 
 
 
 
